Some more color tweaks

--- a/src-11ty/animation.html
+++ b/src-11ty/animation.html
@@ -7,10 +7,10 @@ description: Promotional animation
 <style>
   .canvas {
     margin-top: 30px;
-    background-color: white;
+    background-color: #fafafa;
     width: 600px;
     max-width: initial;
-    height: 315px;
+    height: 330px;
     display: flex;
     align-items: center;
     border: 3px solid black;
