--- a/src-11ty/index.html
+++ b/src-11ty/index.html
@@ -10,6 +10,7 @@ description: Link you to specific pages in your Home Assistant instance.
     justify-content: space-between;
     padding: 0 16px 16px;
     align-items: center;
+    line-break: anywhere;
   }
   .instance-header {
     font-weight: 600;
