--- a/src-11ty/redirect-page.html
+++ b/src-11ty/redirect-page.html
@@ -35,7 +35,11 @@ permalink: "redirect/{{ redirect.redirect }}/"
   }
   .instance-footer {
     font-size: 14px;
-    padding-top: 16px;
+    padding: 16px 16px 0;
+    line-break: anywhere;
+  }
+  .instance-footer a {
+    text-decoration: none;
   }
   .instance-footer svg {
     width: 16px;
