Fix lighthouse complaints

--- a/src-11ty/index.html
+++ b/src-11ty/index.html
@@ -1,7 +1,7 @@
 ---
 layout: base_card_with_hero
 javascript_source: my-index.js
-description: Link you to specific pages in your Home Assistant instance.
+description: Link to specific pages in your Home Assistant instance.
 ---
 
 <style>
