--- a/src-11ty/change-url.html
+++ b/src-11ty/change-url.html
@@ -27,6 +27,7 @@ description: Change the URL of your Home Assistant instance.
       Configure My Home Assistant by entering the URL of your Home Assistant
       instance.
     </p>
+    <p>Loading...</p>
     <p>Note: This URL is only stored in your browser.</p>
   </div>
 </my-change-url>
