Adjust for full HD

--- a/src-11ty/animation.html
+++ b/src-11ty/animation.html
@@ -8,28 +8,23 @@ description: Promotional animation
   .canvas {
     margin-top: 30px;
     background-color: #fafafa;
-    width: 600px;
-    max-width: initial;
-    height: 330px;
+    width: 1920px;
+    height: 1080px;
     display: flex;
     align-items: center;
     border: 3px solid black;
   }
   .ensure-loaded {
-    margin-top: 300px;
+    margin-top: 30px;
   }
   .canvas img {
-    height: 56px;
-    margin-left: 28px;
+    height: 180px;
+    margin-left: 325px;
     opacity: 0;
     transition: all 1s;
-    box-shadow: var(
-      --ha-card-box-shadow,
-      0 2px 2px 0 rgba(0, 0, 0, 0.14),
-      0 1px 5px 0 rgba(0, 0, 0, 0.12),
-      0 3px 1px -2px rgba(0, 0, 0, 0.2)
-    );
-    border-radius: 4px;
+    box-shadow: 0 20px 20px 0 rgb(0 0 0 / 14%), 0 10px 50px 0 rgb(0 0 0 / 12%),
+      0 3px 10px -20px rgb(0 0 0 / 20%);
+    border-radius: 20px;
   }
 
   .visible {
