--- a/src-11ty/animation.html
+++ b/src-11ty/animation.html
@@ -26,6 +26,9 @@ description: Promotional animation
       0 3px 10px -20px rgb(0 0 0 / 20%);
     border-radius: 20px;
   }
+  .layout {
+    min-width: 1930px;
+  }
 
   .visible {
     opacity: 1 !important;
