Add support for HACS repository redirect (#256)

--- a/src-11ty/redirect-page.html
+++ b/src-11ty/redirect-page.html
@@ -50,9 +50,41 @@ permalink: "redirect/{{ redirect.redirect }}/"
   .highlight {
     display: none;
   }
+
+  .warning {
+      position: relative;
+      padding: 8px;
+      display: flex;
+    }
+  .warning::after {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      opacity: 0.12;
+      pointer-events: none;
+      content: "";
+      border-radius: 4px;
+      background-color: #ffa600;
+    }
+    svg {
+      z-index: 1;
+      color: #ffa600;
+      height: 24px;
+      margin-right: 8px;
+    }
 </style>
 
 <div class="ha-card">
+  {% if redirect.custom %}
+  <div class="warning">
+    <svg fill="#ffa600" viewBox="0 0 24 24">
+      <g><path d="M12,2L1,21H23M12,6L19.53,19H4.47M11,10V14H13V10M11,16V18H13V16"></path></g>
+    </svg>
+    This link redirects to a custom integration.
+  </div>
+  {% endif %}
   {% if redirect.redirect == "oauth" %}
   <h1 class="card-header">Link account to Home Assistant?</h1>
   <div class="card-content">
