Allow defining multiple instances

--- a/src-11ty/change-url.html
+++ b/src-11ty/change-url.html
@@ -28,6 +28,6 @@ description: Change the URL of your Home Assistant instance.
       instance.
     </p>
     <p>Loading...</p>
-    <p>Note: This URL is only stored in your browser.</p>
+    <p>Note: The URL is only stored in your browser.</p>
   </div>
 </my-change-url>
