--- a/src-11ty/redirect-page.html
+++ b/src-11ty/redirect-page.html
@@ -74,6 +74,14 @@ permalink: "redirect/{{ redirect.redirect }}/"
       height: 24px;
       margin-right: 8px;
     }
+    select {
+      margin-left: 4px;
+      padding: 8px;
+      background-color: transparent;
+      color: var(--primary-text-color);
+      border: none;
+      cursor: pointer;
+    }
 </style>
 
 <div class="ha-card">
