--- a/src-11ty/redirect-page.html
+++ b/src-11ty/redirect-page.html
@@ -114,7 +114,7 @@ permalink: "redirect/{{ redirect.redirect }}/"
   <div class="card-actions">
     <div class="fake-button decline-link">Decline</div>
     <div class="open-card-actions">
-      <div class="fake-button open-link-app">Open link on app</div>
+      <div class="fake-button open-link-app">Open link in app</div>
       <div class="fake-button open-link">Link account</div>
     </div>
   </div>
