WIP - Select from multiple instances

--- a/src-11ty/faq.html
+++ b/src-11ty/faq.html
@@ -51,14 +51,13 @@ description: Answers to all your questions about My Home Assistant.
 <div class="section-header">What does My Home Assistant solve?</div>
 <div class="card-content">
   <p>
-    To be more helpful, the documentation wants to link the user to a specific
-    page in their instance. However, each Home Assistant instance is hosted at a
-    different url.
+    To be more helpful, websites want to be able to link users to a specific
+    page within their instances. However each Home Assistant instance is hosted
+    at a different url.
   </p>
   <p>
-    My Home Assistant allows users to store the URL of their instance so that
-    the documentation can link the user directly to the right page in their
-    instance.
+    My Home Assistant allows users to store the URLs of their instances so that
+    websites can link users directly to the right page in their instance.
   </p>
   <p>
     All the data is stored in your browser. At no point will any data leave your
