--- a/src-11ty/index.html
+++ b/src-11ty/index.html
@@ -1,54 +1,19 @@
 ---
 layout: base_card_with_hero
 javascript_source: my-index.js
-description: Link to specific pages in your Home Assistant instance.
+description: Link to a specific pages in your Home Assistant instances.
 ---
-
-<style>
-  .instance-info {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 16px 16px;
-    align-items: center;
-    line-break: anywhere;
-  }
-  .instance-header {
-    font-weight: 600;
-    letter-spacing: 0.05em;
-    font-size: 12px;
-    line-height: 1em;
-  }
-  .error {
-    color: #db4437;
-    font-weight: bold;
-  }
-  button.empty {
-    display: inline-flex;
-    background: none;
-    color: inherit;
-    border: none;
-    padding: 0;
-    font: inherit;
-    text-align: left;
-    cursor: pointer;
-  }
-  button.empty:active,
-  button.empty:focus {
-    outline: none;
-  }
-</style>
 
 <h1 class="card-header">My Home Assistant</h1>
 <div class="card-content">
-  My Home Assistant allows the documentation to link you to specific pages in
-  your Home Assistant instance. See <a href="faq.html">the FAQ</a> for more
-  information.
+  My Home Assistant allows websites to link to specific pages in your Home
+  Assistant instances. See <a href="faq.html">the FAQ</a> for more information.
 </div>
 
 <my-index>
   <div class="instance-info">
     <div>
-      <div class="instance-header">HOME ASSISTANT INSTANCE</div>
+      <div class="instance-header">HOME ASSISTANT INSTANCES</div>
       Loading...
     </div>
   </div>
