--- a/src-11ty/change-url.html
+++ b/src-11ty/change-url.html
@@ -2,7 +2,7 @@
 layout: base_card_with_hero
 javascript_source: my-change-url.js
 permalink: "redirect/_change/"
-description: Change the URL of your Home Assistant instance.
+description: Change the URLs of your Home Assistant instances.
 ---
 
 <style>
@@ -24,10 +24,10 @@ description: Change the URL of your Home Assistant instance.
 <my-change-url>
   <div class="card-content placeholder">
     <p>
-      Configure My Home Assistant by entering the URL of your Home Assistant
-      instance.
+      Configure My Home Assistant by entering the URLs of your Home Assistant
+      instances.
     </p>
     <p>Loading...</p>
-    <p>Note: This URL is only stored in your browser.</p>
+    <p>Note: These URLs are only stored in your browser.</p>
   </div>
 </my-change-url>
